@@ -1,2 +1,2 @@
-AppVersion = "LimeChat for OSX 0.10";
+AppVersion = "LimeChat for OSX 0.10.2";
 CtcpClientInfo = "DCC VERSION CLIENTINFO USERINFO PING TIME";
