@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{535, 85}, {988, 1081}}</string>
+	<string>{{672, 87}, {793, 1081}}</string>
 </dict>
 </plist>
